# github-copilot-vibe-coding-workshop

./: Dockerfile.dotnet  Dockerfile.java  compose.yaml
complete/dotnet/Contoso.BlazorApp/: Program.cs
complete/dotnet/Contoso.BlazorApp/Components/: PostCard.razor
complete/dotnet/Contoso.BlazorApp/Services/: ApiService.cs  UsernameHeaderHandler.cs
dotnet/: ContosoWebApp.sln
dotnet/Contoso.BlazorApp/: Program.cs
dotnet/Contoso.BlazorApp/Components/: App.razor  _Imports.razor
dotnet/Contoso.BlazorApp/Components/Common/: FabButton.razor
dotnet/Contoso.BlazorApp/Components/Layout/: NavMenu.razor
dotnet/Contoso.BlazorApp/Components/Pages/: Home.razor
dotnet/Contoso.BlazorApp/Components/Posts/: PostCard.razor
dotnet/Contoso.BlazorApp/Services/: ApiSettings.cs  AuthState.cs  PostApiService.cs  UsernameHeaderHandler.cs
dotnet2/Contoso.BlazorApp/Components/Common/: LoginPrompt.razor
dotnet2/Contoso.BlazorApp/Components/Posts/: PostCreateModal.razor
dotnet2/Contoso.BlazorApp/Properties/: launchSettings.json
dotnet2/Contoso.BlazorApp/Services/: CommentApiService.cs
java/socialapp/: build.gradle  sns_api.db
javascript/: vite.config.js
javascript/SimpleSocialMediaApplication/: package.json
javascript/SimpleSocialMediaApplication/src/: App.jsx
javascript/SimpleSocialMediaApplication/src/api/: api.js
javascript/SimpleSocialMediaApplication/src/components/: ApiStatusBanner.jsx  CommentForm.jsx  CommentItem.jsx  CommentList.jsx  (+7 more)
python/: main.py  pyproject.toml  sns_api.db
python/social_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+30 files in other folders)
